--- a/TODO
+++ b/TODO
@@ -5,19 +5,19 @@ Miscellaneous
 - Organize examples and demo programs
 	- Add real examples do dist
 
-GisObject:
-  - Improve GisMarker
+GritsObject:
+  - Improve GritsMarker
   - Add min/max LOD
   mabye: ?
-    - Add linked list node to GisObject for add/remove
-    - Move rendering code to objects intead of GisOpenGL
+    - Add linked list node to GritsObject for add/remove
+    - Move rendering code to objects intead of GritsOpenGL
     	- How to work with non-opengl renders, do we care?
 
-GisTile:
+GritsTile:
   - Prioritize tile updates
   - Only updates visible tiles
   - Render correct tile resolution when zooming out
-  - Integrate with GisTile?
+  - Integrate with GritsTile?
   how:
     - Update tiles after each render
     - Use backfaces to only fetch rendered triangles for each tile
