--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Grits is a Virtual Globe library using GTK+ and OpenGL
+Grits is a Virtual Globe library developed along side AWeather, but desigend to
+be usable by other program as well.
+
+It is differentiated from other Virtual Globes such as Google Earth, NASA World
+Wind, and KDE Marble in that it is developed primairily as a library that is
+used by other programs, rather than providing it's own user interface.
+
+For more information, see the homepage:
+  - http://www.lug.rose-hulman.edu/proj/aweather/grits
