--- a/HACKING
+++ b/HACKING
@@ -1,3 +1,7 @@
-http://www.opengl.org/sdk/docs/man/
-http://www.glprogramming.com/red/
-http://www.glprogramming.com/blue/
+For Grits development:
+  - http://www.lug.rose-hulman.edu/proj/aweather/development
+
+For OpenGL programming:
+  - http://www.opengl.org/sdk/docs/man/
+  - http://www.glprogramming.com/red/
+  - http://www.glprogramming.com/blue/
